# elio

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
src/catalog/: Cargo.toml  README.md
src/catalog/src/: error.rs  func.rs  lib.rs
src/cmd/: Cargo.toml
src/common/: Cargo.toml
src/common/macros/: Cargo.toml
src/common/macros/src/: lib.rs
src/common/macros/tests/: it_works.rs
src/common/src/: data_type.rs  lib.rs  macros.rs  order.rs  schema.rs  store_types.rs  value.rs  variable.rs
src/common/src/_array/: buffer.rs  impls.rs  list.rs  mask.rs  mod.rs  node.rs
src/common/src/_scalar/: impls.rs  mod.rs  prop_map.rs  prop_value.rs
src/common/src/array/: any.rs  bool.rs  boolean.rs  buffer.rs  chunk.rs  datum.rs  impls.rs  iter.rs  iterator.rs  list.rs  mask.rs  mod.rs  node.rs  path.rs  primitive.rs  prop.rs  prop_map.rs  rel.rs  string.rs  struct_.rs
src/common/src/mapb/: entry.rs  index_key.rs  map.rs  meta.rs  mod.rs
src/common/src/scalar/: impls.rs  list.rs  mod.rs  node.rs  path.rs  prop_map.rs  prop_value.rs  rel.rs  struct_.rs  temporal.rs
src/common2/: Cargo.toml
src/common2/src/types/: mod.rs  mod.rs_
src/core/: Cargo.toml
src/core/src/: db_env.rs  error.rs  lib.rs  result.rs  session.rs
src/core/src/ddl/: constraint.rs  mod.rs
src/cypher/: Cargo.toml  README.md
src/cypher/src/: error.rs  lib.rs  plan_context.rs  pretty_utils.rs  session.rs  statement.rs  variable.rs
src/cypher/src/binder/: builder.rs  create.rs  expr.rs  label_expr.rs  load.rs  match_.rs  mod.rs  pattern.rs  project_body.rs  query.rs  scope.rs
src/cypher/src/catalog/: func.rs  mod.rs
src/cypher/src/expr/: agg_call.rs  create_list.rs  create_map.rs  filters.rs  func_call.rs  label.rs  mod.rs  project_path.rs  property_access.rs  subquery.rs  utils.rs  value.rs  variable_ref.rs
src/cypher/src/ir/: horizon.rs  mod.rs  mutating_pattern.rs  node_connection.rs  order.rs  path_pattern.rs  query.rs  query_graph.rs  query_project.rs
src/cypher/src/meta/: mod.rs
src/cypher/src/plan_node/: all_node_scan.rs  apply.rs  argument.rs  create_node.rs  create_rel.rs  empty.rs  expand.rs  filter.rs  get_prop.rs  get_property.rs  load.rs  mod.rs  node_index_seek.rs  pagination.rs  plan_base.rs  produce_result.rs  project.rs  sort.rs  unit.rs  var_expand.rs
src/cypher/src/planner/: component.rs  create.rs  horizon.rs  index_selection.rs  load.rs  match_.rs  mod.rs  project.rs  single_query.rs
src/cypher/src/props/: func_dep.rs  mod.rs  order.rs
src/db/: Cargo.toml  README.md
src/db/src/: db_env.rs  error.rs  lib.rs  session.rs  transaction.rs
src/exec/: Cargo.toml
src/exec/src/: error.rs  lib.rs  task.rs
src/exec/src/builder/: expression.rs  mod.rs
src/exec/src/executor/: all_node_scan.rs  apply.rs  argument.rs  constraint.rs  create_node.rs  create_rel.rs  expand.rs  filter.rs  load_csv.rs  mod.rs  node_index_seek.rs  produce_result.rs  project.rs  relscan.rs  unit.rs  var_expand.rs
src/expr/: Cargo.toml
src/expr/macros/: Cargo.toml
src/expr/macros/src/: lib.rs
src/expr/src/: error.rs  lib.rs
src/expr/src/func/: arith.rs  bool.rs  compare.rs  list.rs  mod.rs  op_arith.rs  op_bool.rs  op_unary.rs  operator.rs  sig.rs  string.rs  temporal.rs
src/expr/src/impl_/: constant.rs  create_list.rs  create_map.rs  create_struct.rs  field_access.rs  func_call.rs  func_executor.rs  label.rs  mod.rs  project_path.rs  property_access.rs  variable_ref.rs
src/logictest/: Cargo.toml  README.md
src/logictest/src/: graphdb.rs  lib.rs
src/logictest/tests/: drive.rs
src/logictest/tests/basic/: constraint.slt  create.slt  expand.slt  filter.slt  index_seek.slt  load_csv.slt  with.slt
src/logictest/tests/expr/: field_access.slt  list.slt  path.slt
src/logictest/tests/func/: arith.slt  bool.slt  compare.slt  date.slt  null_coercion.slt
src/logictest/tests/testdata/: without_header.csv
src/parser/: Cargo.toml
src/parser/src/ast/: expr.rs  meta.rs  mod.rs  order.rs  pattern.rs  query.rs  return_item.rs  statement.rs  typ.rs
src/parser/src/parser/: mod.rs
src/parser/tests/: _ddl.txt  clause.rs  ddl.rs  expr.rs  pattern.rs  query.rs  stmt.rs
src/plannertest/: Cargo.toml
src/plannertest/src/: env.rs  test_env.rs
src/plannertest/tests/: planner_test.rs
src/plannertest/tests/basic/: create.planner.sql  create.yml  expand.planner.sql  expand.yml  index_seek.planner.sql  index_seek.yml  load.planner.sql  load.yml  match.planner.sql  match.yml  with.planner.sql  with.yml
src/plannertest/tests/expr/: path.planner.sql  path.yml
src/propb/: Cargo.toml  README.md
src/propb/src/: entry.rs  lib.rs  map.rs  meta.rs
src/storage/: Cargo.toml  README.md
src/storage/src/: constraint.rs  cursor.rs  dict.rs  error.rs  graph.rs  graph_store.rs  id_store.rs  lib.rs  meta.rs  token.rs  transaction.rs  types.rs
src/storage/src/codec/: id.rs  mod.rs  node.rs  property.rs  property_value.rs  relationship.rs  token.rs  topology.rs  types.rs
src/storage/src/cursor/: mod.rs  node.rs
src/storage/src/transaction/: id.rs  mod.rs  node.rs  relationship.rs  token.rs
src/storage/tests/: graph_store.rs
src/storage2/: Cargo.toml
src/storage2/src/: dict.rs  error.rs  graph.rs  lib.rs  meta.rs
src/storage2/src/codec/: node.rs  token.rs  types.rs
src/storage2/src/transaction/: mod.rs  node.rs  relationship.rs  token.rs
src/storage_bak/: Cargo.toml  README.md
src/storage_bak/src/: error.rs  graph_store.rs  model.rs  types.rs
src/storage_bak/src/codec/: property.rs  token.rs
src/storage_bak/tests/: graph_store.rs
