[workspace]
members = [
    "src/catalog",
    "src/common",
    "src/core",
    "src/cypher",
    "src/exec",
    "src/expr",
    "src/parser",
    "src/propb",
    "src/storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mojito_catalog = { path = "src/catalog" }
mojito_common = { path = "src/common" }
mojito_cypher = { path = "src/cypher" }
mojito_db = { path = "src/core" }
mojito_exec = { path = "src/exec" }
mojito_expr = { path = "src/expr" }
mojito_parser = { path = "src/parser" }
mojito_propb = { path = "src/propb" }
mojito_storage = { path = "src/storage" }

# other
async-stream = "0.3.6"
async-trait = "0.1.89"
bytes = "1.10.1"
derive_more = { version = "2", features = ["full"] }
educe = "0.6.0"
either = "1.15.0"
enum-as-inner = "0.6.1"
futures = "0.3"
indexmap = "2.12.0"
itertools = "0.14.0"
ordered-float = "5.1.0"
paste = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["full"] }

# dev-depencies
insta = { version = "1.43.1", features = ["yaml"] }
tempfile = "3.5.0"

[profile.dev.package]
# make insta run faster
insta.opt-level = 3
similar.opt-level = 3
