[workspace]
members = [
    "src/catalog",
    "src/cmd",
    "src/common",
    "src/core",
    "src/cypher",
    "src/exec",
    "src/expr",
    "src/logictest",
    "src/parser",
    "src/plannertest",
    "src/storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mojito_catalog = { path = "src/catalog" }
mojito_common = { path = "src/common" }
mojito_core = { path = "src/core" }
mojito_cypher = { path = "src/cypher" }
mojito_exec = { path = "src/exec" }
mojito_expr = { path = "src/expr" }
mojito_parser = { path = "src/parser" }
mojito_plannertest = { path = "src/plannertest" }
mojito_storage = { path = "src/storage" }

# other
anyhow = "1.0"
# arrow = "57.1.0"
async-stream = "0.3.6"
async-trait = "0.1.89"
bitvec = "1.0.1"
bytes = "1.10.1"
clap = "4.5"
derive_more = { version = "2", features = ["full"] }
educe = "0.6.0"
either = "1.15.0"
enum-as-inner = "0.6.1"
futures = "0.3"
indexmap = "2.12.0"
itertools = "0.14.0"
ordered-float = "5.1.0"
paste = "1.0"
pretty-xmlish = "0.1.13"
sqlplannertest = "0.4.1"
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"

# dev-depencies
datatest-stable = "0.3"
insta = { version = "1.43", features = ["yaml"] }
sqllogictest = "0.28"
tempfile = "3"

[profile.dev.package]
# make insta run faster
insta.opt-level = 3
similar.opt-level = 3
