[workspace]
members = [
    "src/catalog",
    "src/cmd",
    "src/common",
    "src/common/macros",
    "src/core",
    "src/cypher",
    "src/exec",
    "src/expr/macros",
    "src/expr",
    "src/logictest",
    "src/parser",
    "src/plannertest",
    "src/storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mojito_catalog = { path = "src/catalog" }
mojito_common = { path = "src/common" }
mojito_core = { path = "src/core" }
mojito_cypher = { path = "src/cypher" }
mojito_exec = { path = "src/exec" }
mojito_expr = { path = "src/expr" }
mojito_parser = { path = "src/parser" }
mojito_plannertest = { path = "src/plannertest" }
mojito_storage = { path = "src/storage" }

# other
anyhow = "1.0"
async-stream = "0.3.6"
async-trait = "0.1.89"
bitvec = "1.0.1"                                     # array bitmap
bytes = "1.10.1"
chrono = "0.4.42"
clap = "4.5"
derive_more = { version = "2", features = ["full"] }
educe = "0.6.0"
either = "1.15.0"
enum-as-inner = "0.6.1"
futures = "0.3"
indexmap = "2.12.0"
iso8601-duration = "0.2.0"                           # for duration parsing
itertools = "0.14.0"
jiff = "0.2.16"                                      # for temporal data repr
ordered-float = "5.1.0"                              # float scalar type repr
paste = "1.0"
pretty-xmlish = "0.1.13"                             # plan node explain
proc-macro2 = "1.0"                                  # expr proc macros
quote = "1.0"                                        # expr proc macros
regex = "1"                                          # for parsing expr macros fuction signature
roaring = "0.11.3"                                   # for path storage(not used by now)
sqlplannertest = "0.4.1"
syn = { version = "2.0", features = ["full"] }       # expr proc macros
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"

# dev-depencies
datatest-stable = "0.3"
insta = { version = "1.43", features = ["yaml"] }
sqllogictest = "0.28"
tempfile = "3"

[profile.dev.package]
# make insta run faster
insta.opt-level = 3
similar.opt-level = 3
