[package]
name = "mojito_common"
version.workspace = true
edition.workspace = true

[dependencies]
# arrow = { workspace = true }
bitvec = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
enum-as-inner = { workspace = true }
itertools = { workspace = true }
ordered-float = { workspace = true }
