[package]
name = "mojito_common"
version.workspace = true
edition.workspace = true

[dependencies]
# arrow = { workspace = true }
bitvec = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
common_macros = { path = "./macros" }
derive_more = { workspace = true, features = ["full"] }
enum-as-inner = { workspace = true }
iso8601-duration = { workspace = true }
itertools = { workspace = true }
ordered-float = { workspace = true }
