[package]
name = "mojito_core"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
mojito_catalog = { workspace = true }
mojito_common = { workspace = true }
mojito_cypher = { workspace = true }
mojito_exec = { workspace = true }
mojito_parser = { workspace = true }
mojito_storage = { workspace = true }
thiserror = { workspace = true }
# other

uuid = { version = "1.18.1", features = ["v4"] }
