[package]
name = "elio_core"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
async-stream = { workspace = true }
elio_catalog = { workspace = true }
elio_common = { workspace = true }
elio_cypher = { workspace = true }
elio_exec = { workspace = true }
elio_parser = { workspace = true }
elio_storage = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
# other

uuid = { version = "1.18.1", features = ["v4"] }
