[package]
name = "mojito_cypher"
version.workspace = true
edition.workspace = true

[dependencies]
indexmap = { workspace = true }
itertools = { workspace = true }
mojito_catalog = { workspace = true }
mojito_common = { workspace = true }
mojito_expr = { workspace = true }
mojito_parser = { workspace = true }
mojito_storage = { workspace = true }
ordered-float = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
