[package]
name = "mojito_exec"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
async-stream = { workspace = true }
educe = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
mojito_catalog = { workspace = true }
mojito_common = { workspace = true }
mojito_cypher = { workspace = true }
mojito_expr = { workspace = true }
mojito_storage = { workspace = true }
roaring = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# extra
