[package]
name = "elio_exec"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
async-stream = { workspace = true }
bitvec = { workspace = true }
educe = { workspace = true }
elio_catalog = { workspace = true }
elio_common = { workspace = true }
elio_cypher = { workspace = true }
elio_expr = { workspace = true }
elio_storage = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
roaring = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# extra, for reading from local files
csv = "1.3"
