[package]
name = "mojito_expr"
version.workspace = true
edition.workspace = true

[dependencies]
bitvec = { workspace = true }
chrono = { workspace = true }
expr_macros = { path = "./macros" }
itertools = { workspace = true }
mojito_common = { workspace = true }
mojito_parser = { workspace = true }
thiserror = { workspace = true }
