[package]
name = "elio_expr"
version.workspace = true
edition.workspace = true

[dependencies]
bitvec = { workspace = true }
chrono = { workspace = true }
elio_common = { workspace = true }
elio_parser = { workspace = true }
expr_macros = { path = "./macros" }
itertools = { workspace = true }
thiserror = { workspace = true }
