[package]
name = "logictest"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
datatest-stable = { workspace = true }
elio_common = { workspace = true }
elio_core = { workspace = true }
futures = { workspace = true }
sqllogictest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }

[[test]]
name = "drive"
harness = false
