[package]
name = "mojito_parser"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
derive_more = { workspace = true, features = ["display"] }
peg = "0.8.5"
# workspace
either = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
