[package]
name = "mojito_plannertest"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
mojito_catalog = { workspace = true }
mojito_common = { workspace = true }
mojito_cypher = { workspace = true }
mojito_expr = { workspace = true }
mojito_parser = { workspace = true }
sqlplannertest = { workspace = true }
