[package]
name = "plannertest"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
elio_catalog = { workspace = true }
elio_common = { workspace = true }
elio_cypher = { workspace = true }
elio_expr = { workspace = true }
elio_parser = { workspace = true }
itertools = { workspace = true }
sqlplannertest = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "planner_test"
harness = false
