[package]
name = "mojito_storage"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
async-trait = { workspace = true }
bytes = { workspace = true }
mojito_common = { workspace = true }
mojito_propb = { workspace = true }
thiserror = { workspace = true }

# local
bytemuck = { version = "1.24.0", features = ["derive"] }
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }

[dev-dependencies]
tempfile = { workspace = true }
