[package]
name = "elio_storage"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
async-trait = { workspace = true }
bitvec = { workspace = true }
bytes = { workspace = true }
elio_common = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# local
bytemuck = { version = "1.24.0", features = ["derive"] }
parking_lot = "0.12"
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }

[dev-dependencies]
tempfile = { workspace = true }
