[package]
name = "mojito_storage2"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
bytes = { workspace = true }
mojito_common = { workspace = true }
thiserror = { workspace = true }
# local
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }

[dev-dependencies]
tempfile = { workspace = true }
