[package]
name = "mojito_storage"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
bytes = { workspace = true }
mojito_common = { workspace = true }
thiserror = { workspace = true }
# local
redb = "2.6.0"
rocksdb = "0.24.0"

[dev-dependencies]
tempfile = { workspace = true }
